// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineInputText renders an input with a placeholder 1`] = `
.c2 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  font: inherit;
  left: 0;
  padding: 0;
  position: absolute;
  text-align: inherit;
  text-transform: inherit;
  top: 0;
}

.c2::-webkit-search-decoration,
.c2::-webkit-search-cancel-button,
.c2::-webkit-search-results-button,
.c2::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2::-webkit-input-placeholder {
  color: #939BA5;
}

.c2::-moz-placeholder {
  color: #939BA5;
}

.c2:-ms-input-placeholder {
  color: #939BA5;
}

.c2::placeholder {
  color: #939BA5;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2[type='number'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c3 {
  color: transparent;
  line-height: inherit;
  max-width: 100%;
  overflow: hidden;
  text-align: inherit;
  white-space: pre;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  position: relative;
}

.c1 {
  border: none;
  border-bottom: 1px dashed;
  border-bottom-color: #C1C6CC;
  color: inherit;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1:focus,
.c1:hover {
  background-color: #F5F6F7;
  border-bottom-color: #6C43E0;
  outline: none;
}

.c1:focus {
  border-bottom-style: solid;
}

<span
  className="c0 c1"
>
  <input
    className="c2"
    onChange={[Function]}
    placeholder="this is the placeholder"
    type="text"
    value=""
  />
  <span
    className="c3"
  >
    this is the placeholder
  </span>
</span>
`;

exports[`InlineInputText renders an input with no value 1`] = `
.c2 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  font: inherit;
  left: 0;
  padding: 0;
  position: absolute;
  text-align: inherit;
  text-transform: inherit;
  top: 0;
}

.c2::-webkit-search-decoration,
.c2::-webkit-search-cancel-button,
.c2::-webkit-search-results-button,
.c2::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2::-webkit-input-placeholder {
  color: #939BA5;
}

.c2::-moz-placeholder {
  color: #939BA5;
}

.c2:-ms-input-placeholder {
  color: #939BA5;
}

.c2::placeholder {
  color: #939BA5;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2[type='number'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c3 {
  color: transparent;
  line-height: inherit;
  max-width: 100%;
  overflow: hidden;
  text-align: inherit;
  white-space: pre;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  position: relative;
}

.c1 {
  border: none;
  border-bottom: 1px dashed;
  border-bottom-color: #C1C6CC;
  color: inherit;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1:focus,
.c1:hover {
  background-color: #F5F6F7;
  border-bottom-color: #6C43E0;
  outline: none;
}

.c1:focus {
  border-bottom-style: solid;
}

<span
  className="c0 c1"
>
  <input
    className="c2"
    onChange={[Function]}
    type="text"
    value=""
  />
  <span
    className="c3"
  >
     
  </span>
</span>
`;

exports[`InlineInputText renders an input with specific predefined value 1`] = `
.c2 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  font: inherit;
  left: 0;
  padding: 0;
  position: absolute;
  text-align: inherit;
  text-transform: inherit;
  top: 0;
}

.c2::-webkit-search-decoration,
.c2::-webkit-search-cancel-button,
.c2::-webkit-search-results-button,
.c2::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2::-webkit-input-placeholder {
  color: #939BA5;
}

.c2::-moz-placeholder {
  color: #939BA5;
}

.c2:-ms-input-placeholder {
  color: #939BA5;
}

.c2::placeholder {
  color: #939BA5;
}

.c2::-webkit-outer-spin-button,
.c2::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2[type='number'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c3 {
  color: transparent;
  line-height: inherit;
  max-width: 100%;
  overflow: hidden;
  text-align: inherit;
  white-space: pre;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  position: relative;
}

.c1 {
  border: none;
  border-bottom: 1px dashed;
  border-bottom-color: #C1C6CC;
  color: inherit;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c1:focus,
.c1:hover {
  background-color: #F5F6F7;
  border-bottom-color: #6C43E0;
  outline: none;
}

.c1:focus {
  border-bottom-style: solid;
}

<span
  className="c0 c1"
>
  <input
    className="c2"
    onChange={[Function]}
    type="text"
    value="type here..."
  />
  <span
    className="c3"
  >
    type here...
  </span>
</span>
`;
